criado service de usuario para encriptar senha // modificados os retornos dos endpoits para ResponseEntity